--- a/oooooooo/.classpath
+++ b/oooooooo/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="loop"/>
+	<classpathentry kind="src" path="sss"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
