--- a/oooooooo/.classpath
+++ b/oooooooo/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="src" path="(dåliga)spel"/>
 	<classpathentry kind="src" path="kattis"/>
 	<classpathentry kind="src" path="repetition"/>
+	<classpathentry kind="src" path="deber"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
