--- a/oooooooo/.classpath
+++ b/oooooooo/.classpath
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="loop"/>
 	<classpathentry kind="src" path="sss"/>
@@ -12,5 +11,6 @@
 	<classpathentry kind="src" path="kattis"/>
 	<classpathentry kind="src" path="repetition"/>
 	<classpathentry kind="src" path="deber"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
